# OpenXR-Samples

./: .gitmodules  CMakeLists.txt  CREDITS.md  README.md
.github/: FUNDING.yml
cmake/: compiler.cmake  defaults.cmake
cmake/macros/: AddTest.cmake  CompileSpirvShader.cmake  DumpCMakeVariables copy.cmake  GenerateQRC.cmake  GroupSources.cmake  SetupQt.cmake  TargetAssimp.cmake  TargetBasis.cmake  TargetBasisu.cmake  TargetFMT.cmake  TargetGLAD.cmake  TargetGLFW3.cmake  TargetGLM.cmake  TargetGlad.cmake  TargetGli.cmake  TargetGlslang.cmake  TargetImgui.cmake  TargetMagnum.cmake  TargetOpenXR.cmake  TargetQt.cmake  TargetSDL2.cmake  TargetVulkan.cmake
data/: yokohama.basis
data/qml/: dynamicscene.qml
data/shaders/: CMakeLists.txt  CubeMapShader.vert  blit.frag.glsl  blit.vert.glsl  imgui.frag.glsl  imgui.vert.glsl  skybox.frag.glsl  skybox.vert.glsl
src/common/: CMakeLists.txt  assets.hpp  basis.hpp  common.cpp  common.hpp  gl.hpp  glad.cpp  glad.hpp  glfw.hpp  interfaces.cpp  interfaces.hpp  logging.hpp  openxrExampleBase.hpp
src/common/gl/: debug.cpp  debug.hpp  framebuffer.cpp  framebuffer.hpp  pipeline.cpp  pipeline.hpp  scene.cpp  scene.hpp  threadedSwapchainRenderer.cpp  threadedSwapchainRenderer.hpp
src/common/glfw/: window.cpp  window.hpp
src/common/imgui/: panel.cpp  panel.hpp
src/common/magnum/: framebuffer.cpp  framebuffer.hpp  glm.hpp  math.hpp  scene.cpp  scene.hpp  window.cpp  window.hpp
src/common/qt/: framebuffer.cpp  framebuffer.hpp  gl.cpp  gl.hpp  logging.cpp  logging.hpp  math.hpp  scene.cpp  scene.hpp  window.cpp  window.hpp
src/common/qt/qml/: offscreenSurface.cpp  offscreenSurface.hpp
src/common/qt/qml/impl/: renderControl.cpp  renderControl.hpp  renderEventHandler.cpp  renderEventHandler.hpp  sharedObject.cpp  sharedObject.hpp
src/common/xrs/: context.hpp  debug.hpp  glm.hpp  math.hpp  swapchain.cpp  swapchain.hpp
src/examples/: CMakeLists.txt  gl_imgui.cpp  gl_single_file_example.cpp  magnum_cubemap_example.cpp  magnum_cylinder_example.cpp  magnum_equirect_example.cpp  magnum_example.cpp  qt_gl_ui.cpp  sdl2_gl_single_file_example.cpp  sdl2_gl_single_file_example_c.cpp
tools/XrInfo/: CMakeLists.txt
tools/XrInfo/src/: OffscreenGLSurface.cpp  OffscreenGLSurface.h  main.cpp
