macro(ADD_EXAMPLE_BINARY file) 
    if (ANDROID)
        add_library(${TARGET_NAME} SHARED ${EXAMPLE})
        add_dependencies(${TARGET_NAME} app-glue)
        target_link_libraries(${TARGET_NAME} app-glue)
    else()
        add_executable(${TARGET_NAME} ${EXAMPLE})
    endif()
    set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "examples")
endmacro()

file(GLOB EXAMPLES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(EXAMPLE ${EXAMPLES})
    get_filename_component(TARGET_NAME ${EXAMPLE} NAME_WE)
    add_example_binary(${EXAMPLE})
    add_dependencies(${TARGET_NAME} common)
    target_link_libraries(${TARGET_NAME} PUBLIC common)
    target_link_libraries(${TARGET_NAME} PUBLIC ${CMAKE_THREAD_LIBS_INIT})
    target_openxr()
    target_fmt()
endforeach()

